<resources>
    <string name="app_name">Tanamkan</string>
    <string name="daftar">Daftar</string>
    <string name="google">Daftar dengan Google</string>
    <string name="akun">Sudah punya akun</string>
    <string name="lupa_password">Lupa password ?</string>
    <string name="kirim_kode">Kirim kode reset</string>
    <string name="pastikan">pastikan email anda telah terdaftar</string>
    <string name="reset">reset password</string>
    <string name="tvVerifikasi">verifikasi</string>
    <string name="masukkan">masukkan kode verifikasi untuk masuk</string>
    <string name="btnVerifikasi">Verifikasi</string>
    <string name="mnHome">home</string>
    <string name="mnTanaman">tanaman</string>
    <string name="mnPot">pot</string>
    <string name="mnProfil">profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dasbor">dasbor</string>
    <string name="tanaman">tanaman</string>
    <string name="pot">pot</string>
    <string name="profil">profil</string>
    <string name="edtProfil">Edit Profil</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ganti_foto_profil">Ganti foto profil</string>
    <string name="tambah_tanaman">tambah tanaman</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="ambil_foto_tanaman">Ambil foto tanaman</string>
    <string name="tambah_pot">tambah pot</string>
    <string name="ambil_foto_pot">Ambil foto pot</string>
    <string name="tanaman1">Mawar</string>
    <string name="tanaman2">Melati</string>
    <string name="tanaman3">Cabai Rawit</string>
    <string name="tanaman4">Jahe</string>
    <string name="tanaman5">Bougenville</string>
    <string name="selesai">Selesai</string>
    <string name="batal">Batal</string>
    <string-array name="letak">
        <item>letak pot</item>
    </string-array>
    <string name="title_activity_tambah_tanaman">tambah tanaman</string>
    <string name="title_activity_tambah_pot">TambahPotActivity</string>
    <string name="title_activity_perkembangan_pertumbuhan">PerkembanganPertumbuhanActivity</string>
    <string name="perkembangan_pertumbuhan"><![CDATA[perkembangan & pertumbuhan]]></string>
</resources>
