<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="21dp"
    android:background="@drawable/gradient">

    <ImageView
        android:layout_width="15dp"
        android:layout_height="25dp"
        android:src="@drawable/icons8_Back"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tvVerifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVerifikasi"
        android:layout_above="@id/tvMasukkan"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:textColor="@color/putih"/>

    <TextView
        android:id="@+id/tvMasukkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan"
        android:layout_above="@id/edtKodeVerifikasi"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/putih"/>

    <EditText
        android:id="@+id/edtKodeVerifikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="kode verifikasi"
        android:textSize="12sp"
        android:textColorHint="@color/putih"
        android:textColor="@color/putih"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnVerifikasi"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textSize="12sp"
        android:text="@string/btnVerifikasi"
        android:layout_below="@id/edtKodeVerifikasi"
        android:background="@drawable/circle_biru"
        android:textColor="@color/putih"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>

</RelativeLayout>