<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahTanamanActivity"
    tools:showIn="@layout/activity_tambah_pot">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlEdit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/tambahPotToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/biru2">
                <ImageView
                    android:id="@+id/tambahPotTitleImage"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icons_back"
                    style="@style/RtlOverlay.Widget.AppCompat.ActionBar.TitleItem"/>
                <TextView
                    android:id="@+id/tambahPotTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tambah_pot"
                    android:textColor="@color/putih"
                    style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
            </android.support.v7.widget.Toolbar>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlEdit2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@id/rlEdit1">
            <EditText
                android:id="@+id/edtNamaPot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="nama pot"
                android:layout_marginTop="16dp"
                android:layout_alignParentTop="true"
                android:textSize="12sp"
                android:textColorHint="@color/biru2"
                android:textColor="@color/biru2"
                android:inputType="text"
                android:backgroundTint="@color/biru2"/>

            <EditText
                android:id="@+id/edtLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtNamaPot"
                android:hint="lokasi anda"
                android:textSize="12sp"
                android:textColorHint="@color/biru2"
                android:textColor="@color/biru2"
                android:inputType="date"
                android:backgroundTint="@color/biru2"/>
            <Button
                android:id="@+id/btnAmbilFotoPot"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="35dp"
                android:layout_below="@id/edtLokasi"
                android:background="@drawable/circle_biru"
                android:text="@string/ambil_foto_pot"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnKonfirmasi"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/btnAmbilFotoPot"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_hijau"
                android:text="@string/konfirmasi"
                android:textAllCaps="false"
                android:textColor="@color/putih"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>