<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PotFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/potToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/biru2">
            <TextView
                android:id="@+id/potTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pot"
                android:textColor="@color/putih"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:id="@+id/rlIsi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/potToolbar"
            android:paddingRight="16dp"
            android:paddingLeft="16dp">
            <android.support.v7.widget.CardView
                android:id="@+id/cvPot1"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/hijau2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:id="@+id/tvNamaPot1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pot 1"
                        android:textColor="@color/putih"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tvNamaTanaman1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanaman1"
                        android:textColor="@color/putih"
                        android:layout_below="@id/tvNamaPot1"
                        android:textSize="12sp"/>
                    <ImageView
                        android:id="@+id/ivMore1"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:src="@drawable/ic_more_putih"
                        android:textSize="16sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvPot2"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                android:layout_below="@id/cvPot1"
                app:cardBackgroundColor="@color/hijau2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:id="@+id/tvNamaPot2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pot 2"
                        android:textColor="@color/putih"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tvNamaTanaman2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanaman2"
                        android:textColor="@color/putih"
                        android:layout_below="@id/tvNamaPot2"
                        android:textSize="12sp"/>
                    <ImageView
                        android:id="@+id/ivMore2"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:src="@drawable/ic_more_putih"
                        android:textSize="16sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvPot3"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                android:layout_below="@id/cvPot2"
                app:cardBackgroundColor="@color/hijau2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:id="@+id/tvNamaPot3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pot 3"
                        android:textColor="@color/putih"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tvNamaTanaman3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanaman3"
                        android:textColor="@color/putih"
                        android:layout_below="@id/tvNamaPot3"
                        android:textSize="12sp"/>
                    <ImageView
                        android:id="@+id/ivMore3"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:src="@drawable/ic_more_putih"
                        android:textSize="16sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvPot4"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                android:layout_below="@id/cvPot3"
                app:cardBackgroundColor="@color/hijau2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:id="@+id/tvNamaPot4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pot 4"
                        android:textColor="@color/putih"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tvNamaTanaman4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanaman4"
                        android:textColor="@color/putih"
                        android:layout_below="@id/tvNamaPot4"
                        android:textSize="12sp"/>
                    <ImageView
                        android:id="@+id/ivMore4"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:src="@drawable/ic_more_putih"
                        android:textSize="16sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvPot5"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                android:layout_below="@id/cvPot4"
                app:cardBackgroundColor="@color/hijau2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:id="@+id/tvNamaPot5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pot 5"
                        android:textColor="@color/putih"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tvNamaTanaman5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanaman5"
                        android:textColor="@color/putih"
                        android:layout_below="@id/tvNamaPot5"
                        android:textSize="12sp"/>
                    <ImageView
                        android:id="@+id/ivMore5"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:src="@drawable/ic_more_putih"
                        android:textSize="16sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="75dp"
            android:layout_marginRight="25dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/flButtonTambahPot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/add"
                app:fabSize="normal"/>
        </FrameLayout>
    </RelativeLayout>

</FrameLayout>